Fix code issue